# return-on-thinking

./: .gitignore  LICENSE  METHODS.md  README.md  datapackage.json  pyproject.toml  pytest.ini
.github/workflows/: pr-validate.yml  release.yml  weekly.yml
data/assumptions/: v1.yaml  v2.yaml
data/curated/: ai_revenue.csv  cik_cache.json  historical_booms.csv  ledger.csv  occupations.csv  rct_effects.csv  universe.csv
data/raw/: transcript_hits.csv
data/series/: census_datacenter_construction.csv  damodaran_implied_erp.csv  edgar_amd_capex_q.csv  edgar_amd_debt_issued_q.csv  edgar_amd_ocf_q.csv  edgar_amzn_capex_q.csv  edgar_amzn_debt_issued_q.csv  edgar_amzn_ocf_q.csv  edgar_apld_capex_q.csv  edgar_apld_debt_issued_q.csv  edgar_apld_ocf_q.csv  edgar_crwv_capex_q.csv  edgar_crwv_debt_issued_q.csv  edgar_crwv_ocf_q.csv  edgar_googl_capex_q.csv  edgar_googl_ocf_q.csv  edgar_iren_capex_q.csv  edgar_iren_ocf_q.csv  edgar_meta_capex_q.csv  edgar_meta_debt_issued_q.csv  edgar_meta_ocf_q.csv  edgar_msft_capex_q.csv  edgar_msft_ocf_q.csv  edgar_nvda_capex_q.csv  edgar_nvda_debt_issued_q.csv  edgar_nvda_ocf_q.csv  edgar_orcl_capex_q.csv  edgar_orcl_debt_issued_q.csv  edgar_orcl_ocf_q.csv  eia_elec_price_az.csv  eia_elec_price_ia.csv  eia_elec_price_oh.csv  eia_elec_price_or.csv  (+14 more)
docs/: CNAME  benefit.html  earnings.html  fragility.html  history.html  index.html  map.html  methodology.html  spark.js  style.css  system.html
schemas/: ledger.schema.json
src/rot/: cli.py  (+13 more)
tests/: test_backfill.py  test_quarterly_differencing.py  test_seriesio.py  test_validate_curated.py
(+16 files in other folders)
